2025-02-26 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Store user name rather than uid in log records, resolves #363

2025-02-24 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Allow import reaction to target configuration group, resolves #367

2025-02-05 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Make it possible to put configuration into several groups, resolves #366

2025-01-20 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Migrate all tests to typo3/testing-framework, resolves #359

2025-01-10 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Update datatables, drop RequireJS, use Luxon instead of Moment, resolves #358

2025-01-02 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Drop Extbase usage for logs, resolves #362

2024-12-31 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Adapt to changes in connector services 6.0.0, resolves #351

2024-12-27 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Add a delete reaction, resolves #361
    * Avoid accessing substructure when not of the expected type, resolves #360
    * Release version 7.3.0

2024-11-24 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Improve passing properly structured data to DatamapPostprocessEvent, references #355
    * Release version 7.2.9

2024-11-22 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Pass properly structured data to DatamapPostprocessEvent, resolves #355
    * Fix cross-linking and documentation configuration, resolves #356
    * Release version 7.2.8

2024-11-04 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Use Core method for formatting TCE log messages, resolves #353, references #352
    * Release version 7.2.7

2024-10-16 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Allow for unknown number of markers in TCE log messages, resolves #352

2024-10-14 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Properly output warnings from Reaction import (thanks to Mathias Brodala)
