@@ -1,6 +1,7 @@
 2025-02-26 Francois Suter (Idéative)  <typo3@ideative.ch>
 
     * Store user name rather than uid in log records, resolves #363
+    * Restore visual cue for ordering, resolves #364
 
 2025-02-24 Francois Suter (Idéative)  <typo3@ideative.ch>
 
